--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,8 @@
   "rules": {
     "no-console": "error",
     "no-use-before-define": "off",
-    "@typescript-eslint/no-unused-vars": "error"
+    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-explicit-any": "off"
   },
   "settings": {
     "import/core-modules": ["react", "react-dom"]
