--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,18 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
 /.pnp
 .pnp.js
 
 # testing
 /coverage
+
+# testing
+coverage
+tests_output
+chromedriver.log
+test-report.xml
 
 # production
 /build
@@ -21,3 +27,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# editors
+.vscode
+*.swp
+*.swo
+.idea
