--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "prepare": "husky install",
-    "lint-staged": "lint-staged --verbose"
+    "lint-staged": "lint-staged --verbose",
+    "codeceptjs": "codeceptjs run --steps",
+    "codeceptjs:headless": "HEADLESS=true codeceptjs run --steps",
+    "codeceptjs:ui": "codecept-ui --app",
+    "codeceptjs:demo": "codeceptjs run --steps -c node_modules/@codeceptjs/examples",
+    "codeceptjs:demo:headless": "HEADLESS=true codeceptjs run --steps -c node_modules/@codeceptjs/examples",
+    "codeceptjs:demo:ui": "codecept-ui --app  -c node_modules/@codeceptjs/examples"
   },
   "eslintConfig": {
     "extends": [
@@ -50,17 +56,17 @@
     "@types/node": "^20.1.1",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
-    "codeceptjs": "^3.4.1",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "jsdom": "^22.0.0",
     "lint-staged": "^13.2.2",
+    "playwright": "^1.33.0",
     "prettier": "2.8.8",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.4.4"
+    "typescript": "^4.9.5"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
