--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "chart.js": "^4.3.0",
     "jest-environment-jsdom": "^29.5.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
@@ -53,6 +55,7 @@
     "npm": ">=8"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.1.1",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
