--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "NODE_ENV=development react-scripts start",
@@ -71,7 +72,8 @@
     "prettier": "2.8.8",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@types/styled-components": "^5.1.15"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
