--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/core": "^0.83.0",
+    "@nivo/pie": "^0.83.0",
     "@tanstack/react-query": "^4.29.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -15,8 +17,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "NODE_ENV=development react-scripts start",
@@ -59,6 +61,7 @@
     "@faker-js/faker": "^7.6.0",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.1.1",
+    "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
@@ -72,8 +75,7 @@
     "prettier": "2.8.8",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "@types/styled-components": "^5.1.15"
+    "typescript": "^4.9.5"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
