--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -42,6 +42,24 @@ jobs:
 
       - name: Run unit tests
         shell: bash
-        run: npm run test -- . --coverage
+        run: npm run test:unit -- . --coverage
         env:
           CI: true
+
+  e2e:
+    name: Cypress test
+    runs-on: ubuntu-latest
+    needs: [lint, unit-test]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Restore from cache
+        uses: ./.github/actions/prepare
+
+      - name: Cypress run
+        uses: cypress-io/github-action@v5
+        with:
+          start: npm start
+          wait-on: 'http://localhost:3000'
+          browser: chrome
