--- a/package.json
+++ b/package.json
@@ -24,17 +24,13 @@
   "scripts": {
     "start": "NODE_ENV=development react-scripts start",
     "build": "react-scripts build",
-    "test": "jest --silent",
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "prepare": "husky install",
     "lint-staged": "lint-staged --verbose",
-    "codeceptjs": "codeceptjs run --steps",
-    "codeceptjs:headless": "HEADLESS=true codeceptjs run --steps",
-    "codeceptjs:ui": "codecept-ui --app",
-    "codeceptjs:demo": "codeceptjs run --steps -c node_modules/@codeceptjs/examples",
-    "codeceptjs:demo:headless": "HEADLESS=true codeceptjs run --steps -c node_modules/@codeceptjs/examples",
-    "codeceptjs:demo:ui": "codecept-ui --app  -c node_modules/@codeceptjs/examples"
+    "test:unit": "jest --silent",
+    "test:e2e:open": "./node_modules/.bin/cypress open",
+    "test:e2e:run": "./node_modules/.bin/cypress run"
   },
   "eslintConfig": {
     "extends": [
@@ -59,12 +55,14 @@
     "npm": ">=8"
   },
   "devDependencies": {
+    "@bahmutov/add-typescript-to-cypress": "^2.1.2",
     "@faker-js/faker": "^7.6.0",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.1.1",
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
+    "cypress": "^12.12.0",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
