--- a/package.json
+++ b/package.json
@@ -12,14 +12,11 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
-    "chart.js": "^4.3.0",
     "jest-environment-jsdom": "^29.5.0",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "NODE_ENV=development react-scripts start",
@@ -28,7 +25,7 @@
     "lint": "eslint .",
     "prepare": "husky install",
     "lint-staged": "lint-staged --verbose",
-    "test:unit": "jest --silent",
+    "test:unit": "NODE_ENV=test jest --silent",
     "test:e2e:open": "./node_modules/.bin/cypress open",
     "test:e2e:run": "./node_modules/.bin/cypress run"
   },
@@ -36,18 +33,6 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
     ]
   },
   "engines": {
@@ -70,7 +55,7 @@
     "jsdom": "^22.0.0",
     "lint-staged": "^13.2.2",
     "msw": "^1.2.1",
-    "playwright": "^1.33.0",
+    "node-fetch": "^3.3.1",
     "prettier": "2.8.8",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
@@ -81,5 +66,17 @@
   },
   "msw": {
     "workerDirectory": "public"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
