--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,9 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "noEmit": false,
     "jsx": "react-jsx"
   },
-  "include": ["src"],
+  "include": ["./src"],
   "exclude": ["node_modules", "dist", "src/*/node_modules"]
 }
