--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -60,6 +60,8 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
-          start: npm start
+          start: npm run start:e2e
           wait-on: 'http://localhost:3000'
           browser: chrome
+        env:
+          REACT_APP_MSW_ENABLED: false
