--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "jest-environment-jsdom": "^29.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.3"
   },
   "scripts": {
-    "start": "NODE_ENV=development react-scripts start",
+    "start": "REACT_APP_MSW_ENABLED=true react-scripts start",
+    "start:e2e": "REACT_APP_MSW_ENABLED=false react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "lint": "eslint .",
@@ -42,6 +44,7 @@
   "devDependencies": {
     "@bahmutov/add-typescript-to-cypress": "^2.1.2",
     "@faker-js/faker": "^7.6.0",
+    "@jest/globals": "^29.5.0",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.1.1",
     "@types/styled-components": "^5.1.15",
@@ -52,6 +55,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
+    "jest-mock": "^29.5.0",
     "jsdom": "^22.0.0",
     "lint-staged": "^13.2.2",
     "msw": "^1.2.1",
